--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CMP1069_TCS
+application.vendor=Yugo
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1534098136737
@@ -30,6 +31,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/CMP1069_TCS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.CMP1069_TCS-src=src
 includes=**
