--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.CMP1069_TCS-src=src
+file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\Yugo\\Documents\\_Yugo\\Main\\SqliteStudio\\libs\\java\\sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.23.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
